--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "mehdi-fathi/eloquent-filter": "^2.1"
     },
     "require-dev": {
         "backpack/generators": "^3.1",
